# ToolBOSLib

./: .gitlab-ci.yml  CMakeLists.txt  README.md  ThirdPartyLicenses.txt  ci-buildLinux.sh  ci-buildWindows.sh  ci-check.sh  ci-test.sh  ci-testLinux.sh  ci-testWindows.sh  packageVar.cmake  pkgInfo.py  unittest.sh
doc/: ReleaseNotes.txt  userDoxyfile
examples/: AnyLikely.c  AnyLogC.c  AnyLogCPP.cpp  BerkeleySocketServer.c  NetworkUDPClient1.c  NetworkUDPClient2.c  NetworkUDPServer1.c  SynchronizationPerformance.c
src/: Any.h  AnyDef.h  AnyExit.h  AnyLog.c  AnyLog.h  AnyMath.c  AnyMath.h  AnyMem.c  AnyMem.h  AnyStdBool.h  AnyString.c  AnyString.h  AnyTime.c  AnyTime.h  AnyTracing.c  AnyTracing.h  AnyValid.h  ArgvParser.c  ArgvParser.h  ArrayList.c  Atomic.h  BBCM-C.h  BBCM-Cpp.h  BBDM-C.h  BBDM-Cpp.h  BBDM.c  BBDM.h  BBDMSerialize.c  BBDMSerialize.h  BBDMTestTemplate.h  Barrier.c  Barrier.h  Base.c  Base.h  Base2DX.c  Base2DX.h  BaseMath.c  BaseMath.h  BaseSerialize.c  BaseSerialize.h  (+94 more)
test/: TestCoreLibrary.sh
test/AnyString/: TestAnyString.c
test/ESC/: TestESC.c
test/General/: TestGeneral.cpp
test/IOChannel/: TestLifecycle.cpp
test/ListsAndQueues/: TestListsAndQueues.cpp
test/Multithreading/: TestMultithreading.cpp
test/Serialize/: TestSerialize.sh
test/Serialize/General/: Reference_BBDMSerialize.txt  Reference_StructArray.txt  Reference_WriteReadAllFormats.txt  TestSerialize.cpp
test/Serialize/HeaderV2_Read/: TestHeaderV2_Read.cpp
test/Serialize/JSON/: TestSerializeToJSON.bbml  TestSerializeToJSON.py
test/Serialize/Overhead/: TestOverhead.cpp
test/Serialize/SerializeUtility/: BBDMArrayBlockF32-ascii.ser  BBDMArrayBlockF32-binary.ser  TestSerializeUtility.py
test/SerializeGeneral/: Reference_MatlabEvalCode.txt  Reference_NoBeginType.txt
test/SerializeHeaderWrite/: TestSerializeHeaderWrite.cpp
test/WorkQueue/: TestWorkQueue.cpp
